* Remove bootstrap.css - not used * Add fix for chrome - bootstrap 2.1: distorted images in Chrome

--- a/skin/frontend/bootstrapped/penisextender/less/custom.less
+++ b/skin/frontend/bootstrapped/penisextender/less/custom.less
@@ -1,6 +1,9 @@
 /*!
  * @author Artūrs Jansons
  */
+img {
+	max-width: 100%;
+}
 .btn {
     color: white;
 }
